--- a/index.html
+++ b/index.html
@@ -2,45 +2,56 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Delivery Estimator</title>
+<title>Delivery Date Checker</title>
 
 <style>
   body {
     font-family: Arial, sans-serif;
     margin: 0;
   }
+
   .delivery-box {
     border: 1px solid #e5e5e5;
     padding: 16px;
     max-width: 420px;
   }
+
   h4 {
-    font-size: 13px;
-    letter-spacing: 1px;
-    margin-bottom: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 10px;
   }
+
   .row {
     display: flex;
     gap: 8px;
   }
+
   input {
     flex: 1;
     padding: 10px;
     border: 1px solid #ccc;
+    font-size: 14px;
   }
+
   button {
-    padding: 0 16px;
+    padding: 0 18px;
     background: black;
     color: white;
     border: none;
+    font-size: 14px;
     cursor: pointer;
   }
+
   .info {
-    margin-top: 10px;
+    margin-top: 12px;
     font-size: 14px;
+    line-height: 1.6;
   }
+
   .green {
-    color: green;
+    color: #2e7d32;
+    font-weight: 500;
   }
 </style>
 </head>
@@ -48,12 +59,12 @@
 <body>
 
 <div class="delivery-box">
-  <h4>DELIVERY DETAILS</h4>
+  <h4>Check your delivery date</h4>
 
   <div class="row">
     <input
       id="pincode"
-      placeholder="Enter pincode to delivery date"
+      placeholder="Enter pincode to check delivery date"
       maxlength="6"
     />
     <button onclick="checkDelivery()">CHECK</button>
@@ -74,35 +85,55 @@ function checkDelivery() {
 
   const p = Number(pin);
 
+  // Current IST time
   const now = new Date();
   const ist = new Date(
     now.toLocaleString("en-US", { timeZone: "Asia/Kolkata" })
   );
 
+  // Dispatch logic
   const hour = ist.getHours();
   const dispatchDate = new Date(ist);
-  if (hour >= 18) dispatchDate.setDate(dispatchDate.getDate() + 1);
+  if (hour >= 18) {
+    dispatchDate.setDate(dispatchDate.getDate() + 1);
+  }
 
-  let min = 5, max = 7, region = "Rest of India";
+  let minDays = 5;
+  let maxDays = 7;
 
+  // Bengaluru (exact)
   if (p >= 560001 && p <= 560100) {
-    min = max = 3;
-    region = "Bengaluru";
-  } else if (p >= 670000 && p <= 695999) {
-    min = 2; max = 3;
-    region = "Kerala";
-  } else if (
+    minDays = maxDays = 3;
+  }
+  // Kerala
+  else if (p >= 670000 && p <= 695999) {
+    minDays = 2;
+    maxDays = 3;
+  }
+  // Tamil Nadu, Karnataka, AP, Telangana, Maharashtra
+  else if (
     (p >= 600000 && p <= 643999) ||
     (p >= 560000 && p <= 591999) ||
     (p >= 500000 && p <= 535999) ||
     (p >= 400000 && p <= 444999)
   ) {
-    min = 3; max = 4;
-    region = "Selected States";
+    minDays = 3;
+    maxDays = 4;
   }
 
+  // Delivery dates
+  const startDate = new Date(dispatchDate);
+  startDate.setDate(dispatchDate.getDate() + minDays);
+
+  const endDate = new Date(dispatchDate);
+  endDate.setDate(dispatchDate.getDate() + maxDays);
+
+  const dateOptions = { day: "numeric", month: "long" };
+  const startText = startDate.toLocaleDateString("en-IN", dateOptions);
+  const endText = endDate.toLocaleDateString("en-IN", dateOptions);
+
   document.getElementById("result").innerHTML = `
-    <p>🚚 Delivery in <strong>${min}${min !== max ? "–" + max : ""} days</strong> (${region})</p>
+    <p>🚚 Delivery by <strong>${startText}${minDays !== maxDays ? " or " + endText : ""}</strong></p>
     <p>📦 Dispatch: ${dispatchDate.toDateString()}</p>
     <p class="green">Free shipping all over India</p>
   `;
@@ -111,3 +142,4 @@ function checkDelivery() {
 
 </body>
 </html>
+
