--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   }
 
   .info {
-    margin-top: 12px;
+    margin-top: 10px;
     font-size: 14px;
     line-height: 1.6;
   }
@@ -58,7 +58,7 @@
 
 <body>
 
-<div class="delivery-box">
+<div class="delivery-box" id="box">
   <h4>Check your delivery date</h4>
 
   <div class="row">
@@ -74,72 +74,69 @@
 </div>
 
 <script>
+function sendHeight() {
+  const height = document.body.scrollHeight;
+  parent.postMessage({ iframeHeight: height }, "*");
+}
+
 function checkDelivery() {
   const pin = document.getElementById("pincode").value;
 
   if (!/^\d{6}$/.test(pin)) {
     document.getElementById("result").innerHTML =
       "Please enter a valid 6-digit pincode.";
+    sendHeight();
     return;
   }
 
   const p = Number(pin);
 
-  // Current IST time
   const now = new Date();
   const ist = new Date(
     now.toLocaleString("en-US", { timeZone: "Asia/Kolkata" })
   );
 
-  // Dispatch logic
   const hour = ist.getHours();
   const dispatchDate = new Date(ist);
-  if (hour >= 18) {
-    dispatchDate.setDate(dispatchDate.getDate() + 1);
-  }
+  if (hour >= 18) dispatchDate.setDate(dispatchDate.getDate() + 1);
 
-  let minDays = 5;
-  let maxDays = 7;
+  let minDays = 5, maxDays = 7;
 
-  // Bengaluru (exact)
   if (p >= 560001 && p <= 560100) {
     minDays = maxDays = 3;
-  }
-  // Kerala
-  else if (p >= 670000 && p <= 695999) {
-    minDays = 2;
-    maxDays = 3;
-  }
-  // Tamil Nadu, Karnataka, AP, Telangana, Maharashtra
-  else if (
+  } else if (p >= 670000 && p <= 695999) {
+    minDays = 2; maxDays = 3;
+  } else if (
     (p >= 600000 && p <= 643999) ||
     (p >= 560000 && p <= 591999) ||
     (p >= 500000 && p <= 535999) ||
     (p >= 400000 && p <= 444999)
   ) {
-    minDays = 3;
-    maxDays = 4;
+    minDays = 3; maxDays = 4;
   }
 
-  // Delivery dates
-  const startDate = new Date(dispatchDate);
-  startDate.setDate(dispatchDate.getDate() + minDays);
+  const start = new Date(dispatchDate);
+  start.setDate(dispatchDate.getDate() + minDays);
 
-  const endDate = new Date(dispatchDate);
-  endDate.setDate(dispatchDate.getDate() + maxDays);
+  const end = new Date(dispatchDate);
+  end.setDate(dispatchDate.getDate() + maxDays);
 
-  const dateOptions = { day: "numeric", month: "long" };
-  const startText = startDate.toLocaleDateString("en-IN", dateOptions);
-  const endText = endDate.toLocaleDateString("en-IN", dateOptions);
+  const options = { day: "numeric", month: "long" };
 
   document.getElementById("result").innerHTML = `
-    <p>🚚 Delivery by <strong>${startText}${minDays !== maxDays ? " or " + endText : ""}</strong></p>
+    <p>🚚 Delivery by <strong>
+      ${start.toLocaleDateString("en-IN", options)}
+      ${minDays !== maxDays ? " or " + end.toLocaleDateString("en-IN", options) : ""}
+    </strong></p>
     <p>📦 Dispatch: ${dispatchDate.toDateString()}</p>
     <p class="green">Free shipping all over India</p>
   `;
+
+  sendHeight();
 }
+
+window.onload = sendHeight;
 </script>
 
 </body>
 </html>
-
